--- a/certificates/openssl_server.cnf
+++ b/certificates/openssl_server.cnf
@@ -48,9 +48,14 @@ CN  = localhost
 subjectAltName = @alt_names
 
 [ alt_names ]
-IP.1 = 127.0.0.1
 DNS.1 = localhost
-DNS.2 = admin.localhost
-DNS.3 = api.localhost
-DNS.4 = auth.localhost
+DNS.2 = auth.localhost
+DNS.3 = admin.localhost
+DNS.4 = api.localhost
+DNS.5 = backstage.localhost
 DNS.6 = client.localhost
+DNS.7 = ghost.localhost
+DNS.8 = harbor.localhost
+DNS.9 = jenkins.localhost
+DNS.10 = jupyterhub.localhost
+DNS.11 = wordpress.localhost
